objects/vlocity_cmt__FulfilmentRequestLineRelationship__c.object
<CustomObject>
    <description>Dependency relationship between Fulfilment Request Items</description>
    <fields>
        <fullName>vlocity_cmt__FulfilmentRequestLineId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Fulfilment Request Item</description>
        <inlineHelpText>Fulfilment Request Item</inlineHelpText>
        <label>Fulfilment Request Line Item</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>FulfilmentRequestLineRelationships</relationshipLabel>
        <relationshipName>FulfilmentRequestLineRelationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelatedFulfilmentRequestLineId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Fulfilment Request Item</description>
        <inlineHelpText>Related Fulfilment Request Item</inlineHelpText>
        <label>Related Fulfilment Request Line</label>
        <referenceTo>vlocity_cmt__FulfilmentRequestLine__c</referenceTo>
        <relationshipLabel>FulfilmentRequestLineRelationships (Related Fulfilment Request Line)</relationshipLabel>
        <relationshipName>FulfilmentRequestLineRelationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Relationship Type</description>
        <inlineHelpText>Relationship Type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dependency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fulfilment Request Line Relationship</label>
    <nameField>
        <label>Fulfilment Request Line Relationship Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FulfilmentRequestLineRelationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>